--- a/problems/templates/problems/problems_list.html
+++ b/problems/templates/problems/problems_list.html
@@ -2,10 +2,22 @@
     {% for problem in problems_list %}
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">[{{ problem.id }}] {{ problem.name }}</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Difficulty: {{ problem.difficulty }}</h6>
-                    <p class="card-text">{{ problem.text }}</p>
-                <a href="problem/{{ problem.id }}" class="card-link">Details</a>
+{#                [<a href="problem/{{ problem.id }}" class="card-link">{{ problem.id }}</a>]#}
+                [{{ problem.id }}]
+{#                <h6 class="card-subtitle mb-2 text-muted">Difficulty: {{ problem.difficulty }}</h6>#}
+                <p class="card-text">
+                    {% if problem.name %}
+                        <b>{{ problem.name }}.</b>
+                    {% endif %}
+                    {{ problem.text }}
+                </p>
+{#                {% if problem.solutions %}#}
+{#                    {% for solution in problem.solutions %}#}
+{#                        <p>#}
+{#                            {{ solution.text }}#}
+{#                        </p>#}
+{#                    {% endfor %}#}
+{#                {% endif %}#}
             </div>
         </div>
     {% endfor %}
