--- a/problems/templates/problems/problems_list.html
+++ b/problems/templates/problems/problems_list.html
@@ -1,10 +1,10 @@
-{% if problems_list %}
-    {% for problem in problems_list %}
+{% if page_obj %}
+    {% for problem in page_obj %}
         <div class="card">
             <div class="card-body">
-{#                [<a href="problem/{{ problem.id }}" class="card-link">{{ problem.id }}</a>]#}
+                {#                [<a href="problem/{{ problem.id }}" class="card-link">{{ problem.id }}</a>]#}
                 [{{ problem.id }}]
-{#                <h6 class="card-subtitle mb-2 text-muted">Difficulty: {{ problem.difficulty }}</h6>#}
+                {#                <h6 class="card-subtitle mb-2 text-muted">Difficulty: {{ problem.difficulty }}</h6>#}
                 <p class="card-text">
                     {% if problem.name %}
                         <b>{{ problem.name }}.</b>
@@ -24,6 +24,7 @@
             </div>
         </div>
     {% endfor %}
+    {% include 'components/navigation.html' with label=1 %}
 {% else %}
     <p>No problems are available.</p>
 {% endif %}
