--- a/problems/templates/problems/problems_list.html
+++ b/problems/templates/problems/problems_list.html
@@ -1,30 +1,38 @@
-{% if page_obj %}
-    {% for problem in page_obj %}
-        <div class="card">
-            <div class="card-body">
-                {#                [<a href="problem/{{ problem.id }}" class="card-link">{{ problem.id }}</a>]#}
-                [{{ problem.id }}]
-                {#                <h6 class="card-subtitle mb-2 text-muted">Difficulty: {{ problem.difficulty }}</h6>#}
-                <p class="card-text">
-                    {% if problem.name %}
-                        <b>{{ problem.name }}.</b>
-                    {% endif %}
-                    {{ problem.text }}
-                </p>
-                {% if problem.solution %}
-                    <button class="btn btn-light" type="button" data-toggle="collapse"
-                            data-target="#solutionFor{{ problem.id }}" aria-expanded="false"
-                            aria-controls="solutionFor{{ problem.id }}">
-                        Solution
-                    </button>
-                    <div class="collapse" id="solutionFor{{ problem.id }}">
-                        {{ problem.solution }}
+{% extends 'base/base.html' %}
+
+<div class="container">
+    <div class="row justify-content-center">
+        {% block content %}
+            {% if page_obj %}
+                {% for problem in page_obj %}
+                    <div class="card">
+                        <div class="card-body">
+                            [<a href="{% url 'problem' problem.id %}" class="card-link">{{ problem.id }}</a>]
+                            {#                    [{{ problem.id }}]#}
+                            {#                <h6 class="card-subtitle mb-2 text-muted">Difficulty: {{ problem.difficulty }}</h6>#}
+                            <p class="card-text">
+                                {% if problem.name %}
+                                    <b>{{ problem.name }}.</b>
+                                {% endif %}
+                                {{ problem.text }}
+                            </p>
+                            {% if problem.solution %}
+                                <button class="btn btn-light" type="button" data-toggle="collapse"
+                                        data-target="#solutionFor{{ problem.id }}" aria-expanded="false"
+                                        aria-controls="solutionFor{{ problem.id }}">
+                                    Solution
+                                </button>
+                                <div class="collapse" id="solutionFor{{ problem.id }}">
+                                    {{ problem.solution }}
+                                </div>
+                            {% endif %}
+                        </div>
                     </div>
-                {% endif %}
-            </div>
-        </div>
-    {% endfor %}
-    {% include 'components/navigation.html' with label=1 %}
-{% else %}
-    <p>No problems are available.</p>
-{% endif %}
+                {% endfor %}
+                {% include 'components/navigation.html' with label=1 %}
+            {% else %}
+                <p>No problems are available.</p>
+            {% endif %}
+        {% endblock %}
+    </div>
+</div>
