--- a/problems/templates/problems/problems_list.html
+++ b/problems/templates/problems/problems_list.html
@@ -12,7 +12,8 @@
                             <script>
                                 function copyTextToClipboard() {
                                     const elem = document.createElement('textarea');
-                                    elem.value = `{{ problem.text }}`;
+                                    alert(String.raw`{{ problem.text }}`)
+                                    elem.value = String.raw`{{ problem.text }}`;
                                     document.body.appendChild(elem);
                                     elem.select();
                                     document.execCommand('copy');
