--- a/problems/templates/problems/problem.html
+++ b/problems/templates/problems/problem.html
@@ -3,6 +3,13 @@
 {% block content %}
     <div class="container">
         <h4>Problem</h4>
+        {% if problem.attributes.all %}
+            <ul class="list-group list-group-horizontal">
+                {% for attribute in problem.attributes.all %}
+                    <li class="list-group-item">{{ attribute.name }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
         <p>
             {{ problem.text }}
         </p>
