Add attributes frontend

--- a/problems/templates/problems/index.html
+++ b/problems/templates/problems/index.html
@@ -1,4 +1,4 @@
-{% extends 'base/base.html' %}
+{% extends 'problems/../../../templates/base/base.html' %}
 
 {% block content %}
     {% include 'problems/problems_list.html' %}
