--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -11,8 +11,10 @@
     <!-- KaTeX CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.css"
           integrity="sha384-Um5gpz1odJg5Z4HAmzPtgZKdTBHZdw8S29IecapCSB31ligYPhHQZMIlWLYQGVoc" crossorigin="anonymous">
-    <!-- Additional CSS -->
-    <link rel="stylesheet" href="{% static 'css/general.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/contrib/copy-tex.css" rel="stylesheet" type="text/css">
+    <!-- Custom CSS -->
+    {% block custom_css %}
+    {% endblock custom_css %}
 
     <title>Problems ua</title>
 </head>
@@ -21,7 +23,7 @@
 {% include 'base/header.html' %}
 
 {% block content %}
-{% endblock %}
+{% endblock content %}
 
 {% include 'base/footer.html' %}
 
@@ -35,6 +37,9 @@
         crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/contrib/auto-render.min.js"
         integrity="sha384-vZTG03m+2yp6N6BNi5iM4rW4oIwk5DfcNdFfxkk9ZWpDriOkXX8voJBFrAO7MpVl"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/contrib/copy-tex.min.js"
+        integrity="sha384-Ep9Es0VCjVn9dFeaN2uQxgGcGmG+pfZ4eBaHxUpxXDORrrVACZVOpywyzvFRGbmv"
         crossorigin="anonymous"></script>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
