--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -12,11 +12,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.css"
           integrity="sha384-Um5gpz1odJg5Z4HAmzPtgZKdTBHZdw8S29IecapCSB31ligYPhHQZMIlWLYQGVoc" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/contrib/copy-tex.css" rel="stylesheet" type="text/css">
+    <!-- Fontawesome -->
+    <script src="https://kit.fontawesome.com/561abe4110.js" crossorigin="anonymous"></script>
     <!-- Custom CSS -->
     {% block custom_css %}
     {% endblock custom_css %}
 
-    <title>Problems ua</title>
+    {% block title %}
+        <title>Problems ua</title>
+    {% endblock title %}
 </head>
 <body>
 
