--- a/problems/templates/problems/single_problem.html
+++ b/problems/templates/problems/single_problem.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 {% load static %}
 {% block custom_css %}
-    <link rel="stylesheet" href="{% static 'problems/css/problem.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'problems/css/problems.css' %}" type="text/css">
 {% endblock custom_css %}
 
 {% block content %}
