--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -31,13 +31,16 @@
                 {#                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>#}
                 {#                </li>#}
             </ul>
-            <form class="d-flex" action="{% url 'problems_list' %}" method="post">
-                {% csrf_token %}
-                <input name="search_text" class="form-control me-2" type="search"
-                       placeholder="Search"
-                       aria-label="Search"
-                       value="{% if search_text %} {{ search_text }} {% endif %}">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+            <form class="d-flex" action="{% url 'problems_list' %}" method="get">
+                <div class="input-group">
+                    <input name="search_text" class="form-control" type="search"
+                           placeholder="Search"
+                           aria-label="Search"
+                           value="{% if search_text %} {{ search_text }} {% endif %}">
+                    <button class="btn btn-outline-success" type="submit">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </div>
             </form>
         </div>
     </div>
