--- a/problems/templates/problems/filter.html
+++ b/problems/templates/problems/filter.html
@@ -13,7 +13,7 @@
                     <i class="fas fa-caret-down chevron-anim"></i>
                     Source
                 </h6>
-                <div class="collapse show" id="sourcesFilter">
+                <div class="collapse show mb-4" id="sourcesFilter">
                     <select class="form-select form-select-sm" name="source_id">
                         <option value="0" selected>Any source</option>
                         {% for source in filter.sources %}
@@ -24,28 +24,31 @@
                             </option>
                         {% endfor %}
                     </select>
-
                 </div>
 
-                <div class="form-group col-sm-4 col-md-3">
-
-                </div>
-                <div class="form-group col-sm-4 col-md-3">
-
-                </div>
-                <div class="form-group col-sm-4 col-md-3">
-
-                </div>
-                <div class="form-group col-sm-8 col-md-6">
-                    <div>
-                        {% for choice in filter.form.groups %}
-                            <label class="checkbox-inline">
-                                {{ choice.tag }} {{ choice.choice_label }}
+                <h6 data-bs-toggle="collapse" data-bs-target="#attributesFilter"
+                    aria-expanded="true" aria-controls="attributesFilter">
+                    <i class="fas fa-caret-down chevron-anim"></i>
+                    Attributes
+                </h6>
+                <div class="collapse show mb-4" id="attributesFilter">
+                    {% for attribute in filter.attributes %}
+                        <div class="mt-2 mb-2 ms-2">
+                            <input class="checkbox-style" id="check{{ attribute.name }}" type="checkbox"
+                                   value="{{ attribute.id }}" name="selected_attributes"
+                                    {% if attribute.id in filter.selected_attributes %}
+                                   checked
+                                    {% endif %}>
+                            <label class="boxed-checkbox form-check-label boxed user-select-none"
+                                   for="check{{ attribute.name }}" style="background-color: {{ attribute.color }}">
+                                {{ attribute.name }}
                             </label>
-                        {% endfor %}
-                    </div>
+                        </div>
+
+                    {% endfor %}
                 </div>
-                <div class="d-flex d-flex-row mt-4">
+
+                <div class="d-flex d-flex-row">
                     <a class="btn btn-outline-secondary me-1" href="{% url 'problems_list' %}">Reset</a>
                     <button class="btn btn-outline-success ms-1" type="submit">
                         Apply
