--- a/problems/templates/problems/problems_list.html
+++ b/problems/templates/problems/problems_list.html
@@ -22,7 +22,7 @@
                                     <div class="mt-2 me-1 user-select-none">
                                         <label>
                                             <input class="form-check-input" type="checkbox" id="checkboxNoLabel"
-                                                   aria-label="add to paper">
+                                                   aria-label="add to paper" value="{{ problem.id }}">
                                             Problem
                                         </label>
                                     </div>
